refactor(bake): 优化撤销历史记录栈操作性能
- 使用 removeLast() 替代 remove(size()-1) 提升栈顶元素移除效率
- 使用 getLast() 替代 get(size()-1) 提升栈顶元素访问效率
- 使用 removeFirst() 替代 remove(0) 提升队首元素移除效率
- 减少数组列表重新索引开销，提升整体性能表现